# ref_system

./: .env.example  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  refer_sistem.postman_collection.json
apps/authentication/: admin.py  decorators.py  errors.py  models.py  repository.py  serializers.py  services.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py  0002_alter_phoneauth_created_at_and_more.py  0003_alter_phoneauth_created_at.py  0004_phoneauth_phoneauth_phone_code_idx.py
apps/authentication/tests/: conftest.py  test_create_code.py
apps/invite_codes/: admin.py  apps.py  models.py  repository.py  serializers.py  service.py
apps/invite_codes/migrations/: 0001_initial.py  0002_invitecode_invite_code_code_idx.py
apps/users/: admin.py  decorators.py  models.py  repository.py  serializers.py  service.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_remove_customuser_customuser_phone_number_idx_and_more.py  0003_rename_customuser_phone_number_idx_customuser_act_invite_code_idx_and_more.py  0004_alter_customuser_username.py  0005_alter_customuser_username.py
refer_system/: asgi.py  settings.py  urls.py  wsgi.py
services/verify_services/: sms_verify_service.py
utils/: repository.py  verify_service.py
